--- a/ProgFTP/proftp.ui
+++ b/ProgFTP/proftp.ui
@@ -425,7 +425,7 @@
       <rect>
        <x>10</x>
        <y>40</y>
-       <width>121</width>
+       <width>101</width>
        <height>431</height>
       </rect>
      </property>
@@ -433,10 +433,10 @@
     <widget class="QGroupBox" name="informationsServerBox">
      <property name="geometry">
       <rect>
-       <x>140</x>
+       <x>130</x>
        <y>40</y>
-       <width>251</width>
-       <height>361</height>
+       <width>261</width>
+       <height>351</height>
       </rect>
      </property>
      <property name="title">
@@ -445,14 +445,18 @@
      <widget class="QPushButton" name="buttonDeleteServers">
       <property name="geometry">
        <rect>
-        <x>110</x>
-        <y>330</y>
-        <width>101</width>
-        <height>23</height>
+        <x>230</x>
+        <y>13</y>
+        <width>21</width>
+        <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>Delete this server</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>../ProgFTP-build-desktop-Qt_4_8_1_for_Desktop_-_MinGW__Qt_SDK__Debug/images/notsync.png</normaloff>../ProgFTP-build-desktop-Qt_4_8_1_for_Desktop_-_MinGW__Qt_SDK__Debug/images/notsync.png</iconset>
       </property>
      </widget>
      <widget class="QLabel" name="label_2">
@@ -473,7 +477,7 @@
        <rect>
         <x>100</x>
         <y>20</y>
-        <width>141</width>
+        <width>121</width>
         <height>16</height>
        </rect>
       </property>
@@ -628,29 +632,6 @@
        <string>Change</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="buttonSaveChangesServer">
-      <property name="geometry">
-       <rect>
-        <x>20</x>
-        <y>330</y>
-        <width>75</width>
-        <height>23</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Save changes</string>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="remoteFolderEdit">
-      <property name="geometry">
-       <rect>
-        <x>100</x>
-        <y>260</y>
-        <width>141</width>
-        <height>20</height>
-       </rect>
-      </property>
-     </widget>
      <widget class="QLabel" name="localFolderLabel">
       <property name="geometry">
        <rect>
@@ -664,13 +645,26 @@
        <string>localfolder</string>
       </property>
      </widget>
+     <widget class="QLabel" name="remoteFolderLabel">
+      <property name="geometry">
+       <rect>
+        <x>100</x>
+        <y>260</y>
+        <width>141</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>remotefolder</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QGroupBox" name="propertiesBox">
      <property name="geometry">
       <rect>
-       <x>140</x>
+       <x>130</x>
        <y>400</y>
-       <width>251</width>
+       <width>261</width>
        <height>71</height>
       </rect>
      </property>
