--- a/ProgFTP/proftp.ui
+++ b/ProgFTP/proftp.ui
@@ -48,7 +48,7 @@
       <string>Server manager</string>
      </property>
     </widget>
-    <widget class="QTextEdit" name="logFTP">
+    <widget class="QTextEdit" name="logsFTP">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -482,7 +482,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>servername</string>
+       <string/>
       </property>
      </widget>
      <widget class="QLabel" name="label_3">
@@ -642,7 +642,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>localfolder</string>
+       <string/>
       </property>
      </widget>
      <widget class="QLabel" name="remoteFolderLabel">
@@ -655,7 +655,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>remotefolder</string>
+       <string>/</string>
       </property>
      </widget>
     </widget>
@@ -695,6 +695,26 @@
       </property>
      </widget>
     </widget>
+    <widget class="QTextBrowser" name="addServerText">
+     <property name="geometry">
+      <rect>
+       <x>150</x>
+       <y>180</y>
+       <width>221</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
+     </property>
+     <property name="html">
+      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:8pt;&quot;&gt;You must to add at least one FTP server.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -710,6 +730,7 @@
     <property name="title">
      <string>Home</string>
     </property>
+    <addaction name="actionHome"/>
     <addaction name="actionServer_manager"/>
     <addaction name="separator"/>
     <addaction name="actionLogs"/>
@@ -792,6 +813,11 @@
   <action name="actionUpload_file">
    <property name="text">
     <string>Upload file</string>
+   </property>
+  </action>
+  <action name="actionHome">
+   <property name="text">
+    <string>Home</string>
    </property>
   </action>
  </widget>
