--- a/ProgFTP/windowlogs.ui
+++ b/ProgFTP/windowlogs.ui
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>windowHelp</class>
- <widget class="QDialog" name="windowHelp">
+ <class>windowLogs</class>
+ <widget class="QDialog" name="windowLogs">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>538</width>
-    <height>521</height>
+    <width>400</width>
+    <height>300</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>538</width>
-    <height>521</height>
+    <width>400</width>
+    <height>300</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>538</width>
-    <height>521</height>
+    <width>400</width>
+    <height>300</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -28,8 +28,8 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>481</y>
+     <x>230</x>
+     <y>260</y>
      <width>161</width>
      <height>41</height>
     </rect>
@@ -41,14 +41,43 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QTextEdit" name="helpEdit">
+  <widget class="QTextEdit" name="logsEdit">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>541</width>
-     <height>481</height>
+     <width>401</width>
+     <height>261</height>
     </rect>
+   </property>
+   <property name="textInteractionFlags">
+    <set>Qt::NoTextInteraction</set>
+   </property>
+  </widget>
+  <widget class="QLCDNumber" name="sizeFileLogs">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>270</y>
+     <width>61</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="numDigits">
+    <number>5</number>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>273</y>
+     <width>81</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Size of log file :</string>
    </property>
   </widget>
  </widget>
@@ -57,7 +86,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>windowHelp</receiver>
+   <receiver>windowLogs</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -73,7 +102,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>windowHelp</receiver>
+   <receiver>windowLogs</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
